fix bombs going off screen

--- a/assets/game.scss
+++ b/assets/game.scss
@@ -49,7 +49,6 @@
   justify-content: center;
   position: absolute;
   margin: auto auto;
-  background: rgba(0,0,0, 0.7);
   z-index: 10;
 }
 
@@ -76,7 +75,6 @@
   justify-content: center;
   position: absolute;
   margin: auto auto;
-  background: rgba(0,0,0, 0.7);
   z-index: 9;
 }
 
